Footer update and alignment fixes

--- a/src/components/instafluff.scss
+++ b/src/components/instafluff.scss
@@ -157,11 +157,6 @@ h2 {
   padding: 0 1rem;
 }
 
-//footer.footer {
-//  padding: 3rem 0rem 0rem;
-//  background-color: transparent;
-//}
-
 .menu-label {
   font-size: 1em !important;
   text-align: left;
@@ -202,6 +197,36 @@ h2 {
   margin: 0 1.5em 0 0;
 }
 
+// footer
+.footer-links a {
+	color: currentColor;
+}
+
+.footer-links a:hover {
+	color: $instafLinkTextColor;
+}
+
+.footer-link-title {
+	color: $instafHeaderTextColor;
+	font-size: 1.25rem;
+	font-weight: 600;
+}
+
+.footer-link-title:not(:first-child) {
+	margin-top: 1.25em;
+}
+
+.footer-link {
+	margin-top: 0.5rem;
+}
+.footer-link.is-more {
+	font-size: 0.875rem;
+}
+.footer-link.is-more a:not(:hover) {
+	color: $instafLinkTextColor;
+}
+
+// icons
 .icon svg {
   fill: currentColor;
 }
@@ -224,8 +249,6 @@ h2 {
 .githubIcon {
 	color: #333;
 }
-
-
 
 
 
